--- a/test2.html
+++ b/test2.html
@@ -26,19 +26,19 @@ window.addEventListener('deviceorientation', function(event2) {
 }, true);
 */
 
-    document.getElementById("vibrate").addEventListener("click", function(){
+    vibe(){
+    	console.log('clicked');
 	    navigator.vibrate = navigator.vibrate || navigator.webkitVibrate || navigator.mozVibrate || navigator.msVibrate;
 
-	if (navigator.vibrate) {
-		navigator.vibrate(1000);
-	}
-     
-    //navigator.vibrate(3000);
-    console.log('clicked');
-    }, true);
+		if (navigator.vibrate) {
+			navigator.vibrate(1000);
+		}
+	     
+	    //navigator.vibrate(3000);
+    }
 </script>
 
 <div id="result1"></div>
 <div id="result2"></div>
 
-   <input type="button" id="vibrate" value="진동비율">
+   <input type="button" onclick="vibe()" value="진동비율">
