test vibe in test2

--- a/test2.html
+++ b/test2.html
@@ -26,7 +26,7 @@ window.addEventListener('deviceorientation', function(event2) {
 }, true);
 */
 
-    vibe(){
+    function vibe(){
     	console.log('clicked');
 	    navigator.vibrate = navigator.vibrate || navigator.webkitVibrate || navigator.mozVibrate || navigator.msVibrate;
 
